new_tests/semantics/type/bad/060_IN3.cm

def func(in a:Int) => Void {}

func(3,3.14,'c','hello there')
